--- a/android-app/AndroidManifest.xml
+++ b/android-app/AndroidManifest.xml
@@ -10,7 +10,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -22,10 +23,23 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GuestNumbersActivity" />
+        <activity android:name="edu.rpi.pagr.GuestNumbersActivity" />
+        <activity android:name="edu.rpi.pagr.MakeReservationActivity" />
+        <activity android:name="edu.rpi.pagr.AppetizerListActivity" />
+        <activity android:name="edu.rpi.pagr.PagrDialogActivity" />
+
+        <service android:name="edu.rpi.pagr.service.NotificationService" />
+
+        <activity android:name="edu.rpi.pagr.SettingsActivity"
+            android:parentActivityName="edu.rpi.pagr.GuestNumbersActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.rpi.pagr.GuestNumbersActivity" />
+        </activity>
     </application>
 
 </manifest>
