--- a/android-app/AndroidManifest.xml
+++ b/android-app/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Pagr" >
         <activity
             android:name="edu.rpi.pagr.MainActivity"
             android:label="@string/app_name" >
